fix: bei "Neu: Gutscheine" Logos flex-wrappen für kleine Geräte

--- a/sass/_nachricht.sass
+++ b/sass/_nachricht.sass
@@ -51,6 +51,8 @@
 		flex-direction: row
 		gap: 1rem
 		align-items: center
+		flex-wrap: wrap
+		margin: 1rem 0
 		.logo
 			margin-top: 0
 			&.dresel img
